# pyticket-analytics

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  scratchpad.ipynb
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyticket_analytics/: pyticket_analytics.py
tests/: test_pyticket_analytics.py  test_pyticket_query.py
