[tool.poetry]
name = "pyticket_analytics"
version = "0.1.0"
description = "A python package to access ticketmaster data using python, and to provide tools for simple data analytics for the accessed data."
authors = ["Ega Kurnia Yazid"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
